# Botsashi

./: .replit  CMakeLists.txt  DISCLAIMER.md  README.md  botsashi-frontend.plist.in  msys_dist.sh  runtests.sh
.circleci/: config.yml
Botsashi/: CMakeLists.txt  botsashi.cpp  botsashi.h  botsashi_api.h  botsashi_precise.h  botsashi_tables.h  disassembly.inl  instr_tables.inl  instructions.inl  m68k.cpp  m68k.h  m68kdebug.cpp  m68kops.cpp  memreg.cpp  traits.cpp  traits.inl  utils.cpp  utils.h
Botsashi/emuexample/: Makefile  emuexample.cpp
Botsashi/example/: Makefile  m68kexample.cpp
Simsashi/: CMakeLists.txt  main.cpp  qsimsashi.cpp  qsimsashi.h  simsashi.h
example/: CMakeLists.txt  Makefile  main.cpp
tools/: msys_dist.sh
